compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__return_snapshots@call.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n        let a = 1;\n        let b = 1;\n        let c = 1;\n\n        return a.b(c);"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "a",
                    location: <internal>:13:14,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:17:18,
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:17:18,
                            kind: Int(
                                IntLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:9:19,
    },
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                2,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        2,
                    ),
                },
                name: Identifier {
                    name: "b",
                    location: <internal>:32:33,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            3,
                        ),
                    },
                    location: <internal>:36:37,
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    3,
                                ),
                            },
                            location: <internal>:36:37,
                            kind: Int(
                                IntLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:28:38,
    },
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                4,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        4,
                    ),
                },
                name: Identifier {
                    name: "c",
                    location: <internal>:51:52,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            5,
                        ),
                    },
                    location: <internal>:55:56,
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    5,
                                ),
                            },
                            location: <internal>:55:56,
                            kind: Int(
                                IntLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            5,
                                        ),
                                    },
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:47:57,
    },
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                6,
            ),
        },
        kind: Return(
            Return {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        6,
                    ),
                },
                value: Some(
                    Expression {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                7,
                            ),
                        },
                        location: <internal>:76:81,
                        kind: InstanceCall(
                            InstanceCall {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        7,
                                    ),
                                },
                                callee: Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            9,
                                        ),
                                    },
                                    location: <internal>:74:75,
                                    kind: Variable(
                                        Variable {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    9,
                                                ),
                                            },
                                            reference: StatementId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            name: Identifier {
                                                name: "a",
                                                location: <internal>:74:75,
                                            },
                                            location: <internal>:74:75,
                                        },
                                    ),
                                },
                                name: Callable {
                                    name: Identifier {
                                        name: "b",
                                        location: <internal>:76:77,
                                    },
                                    type_arguments: [],
                                    location: <internal>:76:78,
                                },
                                arguments: [
                                    Expression {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                8,
                                            ),
                                        },
                                        location: <internal>:78:79,
                                        kind: Variable(
                                            Variable {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        8,
                                                    ),
                                                },
                                                reference: StatementId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        4,
                                                    ),
                                                },
                                                name: Identifier {
                                                    name: "c",
                                                    location: <internal>:78:79,
                                                },
                                                location: <internal>:78:79,
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:67:81,
    },
]
