compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__return_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: return;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Return(
            Return {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                value: None,
                location: <internal>:0:7,
            },
        ),
        location: <internal>:0:7,
    },
]
