compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__return_snapshots@scalar.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: return 1;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Return(
            Return {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                value: Some(
                    Expression {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:7:8,
                        kind: Literal(
                            Literal {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                location: <internal>:7:8,
                                kind: Int(
                                    IntLiteral {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        value: 1,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:9,
    },
]
