compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@empty_decl.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12629599239576135137,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        12629599239576135137,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: <internal>:7:12,
                            },
                            type_arguments: [],
                            location: <internal>:7:12,
                        },
                        location: <internal>:7:12,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:15,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
