compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@empty_impl.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12541700452115798297,
        ): Impl(
            Implementation {
                id: ItemId(
                    12541700452115798297,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        6143724420395906933,
                    ),
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:0:0,
                                },
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: <internal>:5:10,
                            },
                            type_arguments: [],
                            location: <internal>:5:10,
                        },
                        location: <internal>:5:10,
                    },
                    location: <internal>:5:10,
                },
                methods: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:0:13,
            },
        ),
    },
    statements: {},
    expressions: {},
}
