compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@ext_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                fn external bar() -> Int32\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13138428697284688615,
        ): Impl(
            Implementation {
                id: ItemId(
                    13138428697284688615,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        7990845552190622859,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                        ),
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            2919503673305580145,
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:52:55,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                13608251888059153114,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [
                                            Named(
                                                Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "Int32",
                                        location: <internal>:0:0,
                                    },
                                ),
                                location: <internal>:0:0,
                            },
                            type_params: [],
                            location: <internal>:61:66,
                        },
                        block: None,
                        location: <internal>:40:66,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:13:80,
            },
        ),
    },
    statements: {},
    expressions: {},
}
