compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@field.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {\n            x: Int32 = 0;\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:7:10,
                            },
                            type_arguments: [],
                            location: <internal>:7:10,
                        },
                        location: <internal>:7:10,
                    },
                    visibility: Private,
                    builtin: false,
                    fields: [
                        Field {
                            id: Field(
                                FieldId {
                                    item: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            field_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "x",
                                location: <internal>:25:26,
                            },
                            field_type: Type {
                                id: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        6143724420395906933,
                                    ),
                                },
                                name: Path {
                                    root: [
                                        Namespace {
                                            name: Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        },
                                    ],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:28:33,
                                        },
                                        type_arguments: [],
                                        location: <internal>:28:33,
                                    },
                                    location: <internal>:28:33,
                                },
                                location: <internal>:28:33,
                            },
                            default_value: Some(
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        index: Idx(
                                            0,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        1,
                                                    ),
                                                },
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:36:37,
                                        },
                                    ),
                                    location: <internal>:36:37,
                                },
                            ),
                            location: <internal>:25:38,
                        },
                    ],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:48,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        ExpressionId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    1,
                ),
            },
            index: Idx(
                0,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                index: Idx(
                    0,
                ),
            },
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        index: Idx(
                            0,
                        ),
                    },
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                index: Idx(
                                    0,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                    location: <internal>:36:37,
                },
            ),
            location: <internal>:36:37,
        },
    },
}
